fix: use overflow:hidden instead of position:fixed to hide the scrollbar
Seriously I don't know why I did this in the first place lol.

--- a/assets/index.css
+++ b/assets/index.css
@@ -78,7 +78,7 @@ body {
 }
 
 .hide-overflow {
-    position: fixed;
+    overflow: hidden;
 }
 
 .mobile-menu {
@@ -101,23 +101,13 @@ body {
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 @keyframes fadeOut {
-    0% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-    }
+    0% { opacity: 1; }
+    100% { opacity: 0; }
 }
 
 .mobile-menu.active {
